# jp-anki

./: .gitignore  .prettierrc  README.md  package.json  tsconfig.json
src/: App.svelte  main.ts  modals.ts  models.ts  stores.ts  toasts.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/res/: back.html  front.html  style.css
src-tauri/src/: audio.rs  deck.rs  file.rs  furigana.rs  kanji.rs  lib.rs  main.rs
src-tauri/src/ext/: char.rs  iterator.rs  mod.rs  string.rs
src-tauri/tests/: audio.rs  char.rs  deck.rs  file.rs  furigana.rs  kanji.rs  string.rs
src-tauri/tests/test-files/: deck.json  deck.json.bk  out.apkg
src/component/: Checkbox.svelte  DeckManager.svelte  FileUploader.svelte  FormInput.svelte  FormTextArea.svelte  NoteEditor.svelte  PreviewInput.svelte  PreviewTextArea.svelte  Tools.svelte
src/component/modal/: Confirm.svelte  Error.svelte  Loading.svelte  NewDeck.svelte
src/model/: deck.ts  note.ts
src/tests/: kanji.test.ts
src/util/: form.ts  kanji.ts  string.ts
