[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.9", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.11", features = ["api-all"] }
anyhow = "1.0.57"
thiserror = "1.0.31"
genanki-rs = "0.1.2"
reqwest = "0.11.10"
tokio = { version = "1.18.2", features = ["full"] }
once_cell = "1.11.0"
bytes = "1.1.0"
sha2 = "0.10.2"
hex-literal = "0.3.4"
assert_matches = "1.5.0"
if_chain = "1.0.2"
strum = "0.24.0"
strum_macros = "0.24.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
